--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <!-- <meta name="viewport" content="width=device-width"> -->
+    <meta name="viewport" content="width=device-width">
+    <link rel="shortcut icon" href="#" />
     <title>Standard Page</title> 
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lato: 700,300,100' rel='stylesheet' type='text/css'>
