--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width">
-    <link rel="shortcut icon" href="#" />
+    <link rel="icon" href="data:;base64,=">
     <title>Standard Page</title> 
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lato: 700,300,100' rel='stylesheet' type='text/css'>
