--- a/public/rijksSearch.css
+++ b/public/rijksSearch.css
@@ -8,7 +8,7 @@ a{
 	color:black;
 }
 
-#blogPost{
+.blog-button{
 	position:absolute;
 	top:10px;
 	right:10px;
@@ -16,6 +16,7 @@ a{
 	background: rgba(255,255,255,0.8);
 	color: black;
 	border:solid 2px;
+	margin:10px;
 }
 
 div, button{
@@ -87,21 +88,17 @@ button:hover{
 	cursor:pointer;
 }
 
-.theButton-after{
-	margin-top: 15px;
+.confirm-button-after{
+	padding:14px;
 
 }
 
-.theInput-after{
-
-}
-
-#searchResults{
+.search-results{
 	color:white;
 	display: block;
 	text-align: center;
 	margin:50px auto;
-	font-size: 1.8em;
+	font-size: 3.5em;
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	text-decoration: none;
@@ -132,6 +129,7 @@ button:hover{
 
 .title-after{
 	font-size: 3em;
+	margin:5px;
 }
 
 #instructions{
@@ -163,12 +161,35 @@ audio{
 }
 
 
-/*-----------------AFTER------------------------*/
+/*-----------------AFTER THE CLICK------------------------*/
 .searchBar-after{
-	width:45vw;
+	width:44vw;
 	margin:10px auto;
+	position: absolute;
+    left: 28vw;
 }
 
 .inline-block{
 	display: inline-block;
+}
+
+.confirm-container-after{
+	top: 0;
+    position: absolute;
+}
+
+.search-input-after{
+	text-align: left;
+}
+
+.blog-button-after{
+	margin:10px!important;
+	border:none;
+	background:white;
+}
+
+.search-results-after{
+	top:20vw;
+	position: absolute;
+	width:46vw;
 }
