--- a/views/blog-post.html
+++ b/views/blog-post.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8"/>
       <!-- <meta name="viewport" content="width=device-width"> -->
       <title>Standard Page</title> 
-      <link rel="stylesheet" type="text/css" href="style.css" />
+      <link rel="stylesheet" type="text/css" href="blog-style.css" />
       <link href='http://fonts.googleapis.com/css?family=Raleway:900, 700, 500, 300' rel='stylesheet' type='text/css'>
     </head>
     <body>
@@ -25,14 +25,8 @@
         <p>Currently, juxtaposition of paintings and sound is the only thing taking place on the page. The project could benefit from some educational content, for instance the painter’s biography. Also, comments that Soundcloud users make about different tracks could be flashed on the screen. Furthermore, user preference algorithms could be used to track which paintings a particular user enjoys the most.</p>
 
       </div>
-      <!--<div id="nono">
-  		  <p class="intro">There are</p>
-        <p class="number">16</p>
-        <p>paintings by Rembrandt currently on display in Rijksmuseum, Amsterdam</p>
-      </div>-->
       <div class="credits">The URL of the background image is http://kalden.home.xs4all.nl/verm/images/rembrandt-wtenbogaerd-det.jpg
       </div>
-      <!-- <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script> -->
       <script src="scripts.js"></script>
     </body>
   </html>
