--- a/views/index.html
+++ b/views/index.html
@@ -15,8 +15,7 @@
   <body>
     <!-- CONTENT GOES HERE -->
     <button class="blog-button"> 
-      <a href="/blogPost">
-          ABOUT </a>
+      <a href="/blogPost"> ABOUT </a>
     </button>
 		<div class="title">Rijks mix</div>
     <div class="searchBar">
