--- a/views/index.html
+++ b/views/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="data:;base64,=">
-    <title>Standard Page</title> 
+    <title>Standard Page</title>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lato: 700,300,100' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" type="text/css" href="rijksSearch.css" />
     <link rel="stylesheet" type="text/css" href="responsive.css" />
-    
+
   </head>
   <body>
     <!-- CONTENT GOES HERE -->
-    <button class="blog-button"> 
+    <button class="blog-button">
       <a href="/blogPost"> ABOUT </a>
     </button>
 		<div class="title">Rijks mix</div>
@@ -24,6 +24,7 @@
         <button class="confirm-button"> CONFIRM </button>
       </div>
     </div>
+    <img id="loading_anim" src="paintings.gif"><img>
     <div id="instructions"> [Turn audio on] </div>
     <div class="search-results"></div>
     <div id="audioDiv"></div>
