--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <!-- CONTENT GOES HERE -->
+    <section>
     <button class="blog-button">
       <a href="/blogPost"> ABOUT </a>
     </button>
@@ -24,10 +25,14 @@
         <button class="confirm-button"> CONFIRM </button>
       </div>
     </div>
-    <img id="loading_anim" src="paintings.gif"><img>
     <div id="instructions"> [Turn audio on] </div>
     <div class="search-results"></div>
     <div id="audioDiv"></div>
+    <div id="work_info_container">
+      <img id="info_icon" src="info.png"></img>
+      <div id="painting_info"></div>
+    </div>
+  </section>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="rijksSearch.js"></script>
   </body>
