--- a/public/blog-style.css
+++ b/public/blog-style.css
@@ -1,5 +1,5 @@
-html { 
-  background: url(rembrandt_portrait.jpg) no-repeat center center fixed; 
+html {
+  background: url(rembrandt_portrait.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -12,6 +12,14 @@ body{
 	font-family: 'Raleway', sans-serif;
 	font-weight: 500;
 	color: white;
+  font-size: 0.9em;
+  line-height: 1.6em;
+}
+
+h3{
+  font-family: 'Droid Serif', serif;
+font-size: 1.5em;
+margin: 30px 0 -5px 0;
 }
 
 
@@ -97,7 +105,7 @@ a{
 		width: 86vw;
 		margin: 7vh auto;
 	}
-	
+
 	#menu_button {
 	    text-align: center;
 	    width: 36vw;
